Fix carousel full-width: use 100vw with negative margin to break out of container

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -632,8 +632,8 @@ body {
 /* Carousel */
 .carousel-container {
     position: relative;
-    width: 100%;
-    margin: 0 auto;
+    width: 100vw;
+    margin-left: calc(-50vw + 50%);
     padding: 0 2.5rem;
     display: grid;
     grid-template-columns: 72px 1fr 72px;
